Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-2141

UnionNode::GetNext() doesn't check for query errors

    XMLWordPrintableJSON

Details

    Description

      When a UDF calls SetError() in the select list, it does not fail the query. This is because UnionNode::GetNext() does not check for the error status after it calls UnionNode::EvalAndMaterializeExprs().

      Attachments

        Issue Links

          Activity

            People

              sailesh Sailesh Mukil
              sailesh Sailesh Mukil
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: