be/src/exec/union-node.h
@@ -91,10 +91,9 @@ class UnionNode : public ExecNode {
   /// If const_exprs is true, then the exprs are evaluated exactly once without
   /// fetching rows from child_row_batch_.
   /// Only commits tuples to row_batch if they are not filtered by conjuncts.
-  /// Returns true if row_batch should be returned to caller or limit has been
-  /// reached, false otherwise.
-  bool EvalAndMaterializeExprs( const std::vector<ExprContext*>& ctxs,
-                                bool const_exprs, Tuple** tuple, RowBatch* row_batch);
+  /// Returns an error status if evaluating an expression results in one.
+  Status EvalAndMaterializeExprs(const std::vector<ExprContext*>& ctxs,
+      bool const_exprs, Tuple** tuple, RowBatch* row_batch);
 };
 
 }
